2021-08-03  Dirk Eddelbuettel  <edd@debian.org>

	* src/datetime.c: Synchronised with r-devel version
	* src/Rstrptime.h (day_of_the_week): Idem

	* src/Makevars.win (PKG_CFLAGS): Added

2021-07-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor version

	* src/datetime.c: Remove R_tzname[2] also removed upstream

2021-04-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugRreports): Added to DESCRIPTION file

2020-12-30  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new CI badge

2020-05-22  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add a 'last commit' badge

2019-07-15  Dirk Eddelbuettel  <edd@debian.org>

	* R/datetime.R: Use registered in .Call(), skip package="..."
	* R/asDatePOSIXct.R: Idem

	* src/datetime.c: Updates, define HAVE_TM_GMTOFF even if NA

2018-10-24  Dirk Eddelbuettel  <edd@debian.org>

	* src/datetime.c (validate_tm): Add one missing '#nocov end'

2018-10-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.4

	* README.md: Added dependencies badge

2018-10-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/datetime.c: Synchronized with R 3.5.1
	* src/attrib.c: Idem

2018-10-20  Joshua Ulrich  <josh.m.ulrich@gmail.com>

	* src/datetime.c: Added POSIXct2D based on two R Core functions
	* R/asDatePOSIXct.R: R wrapper for POSIXct2D
	* man/asDatePOSIXct: Documentation for asDatePOSIXct

2018-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Minor Travis CI update

2017-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.0.3

	* inst/include/RApiDatetime.h: Remove two spurious variable uses

2017-03-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor version and date

	* NAMESPACE: Also enable registration in useDynLib, explicitly export
	six R-level functions

2017-03-26  Dirk Eddelbuettel  <edd@debian.org>
