@@ -35,6 +35,6 @@ jobs:
       - name: Test
         run: ./run.sh run_tests
 
-      #- name: Coverage
-      #  if: ${{ matrix.os == 'ubuntu-latest' }}
-      #  run: ./run.sh coverage
+      - name: Coverage
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: ./run.sh coverage
